--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/biodigital/02fd9a34-a99f-4d14-a8a8-ed9d97d351d2'>BioDigital - Scientific Project Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://cbre.referrals.selectminds.com/jobs/sr-project-manager-58452'>Sr Project Manager - CBRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -72,7 +76,7 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VAMSystems/743999692421028-project-manager'>VAM Systems Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/VAMSystems/743999692421028-project-manager'>VAM Systems Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dubai Singapore</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -168,11 +172,11 @@
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AjnaInfotech/743999692393573-it-project-manager-ecommerce-'>Ajna Infotech IT Project Manager (eCommerce) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AjnaInfotech/743999692393573-it-project-manager-ecommerce-'>Ajna Infotech IT Project Manager (eCommerce) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/sr-project-manager-associate-director-oncology-adoptive-cell-therapy-team-3486'>Sr Project Manager / Associate Director - Oncology Adoptive Cell Therapy Team - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/sr-project-manager-associate-director-oncology-adoptive-cell-therapy-team-3486'>Sr Project Manager / Associate Director - Oncology Adoptive Cell Therapy Team - PPD Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -237,7 +241,7 @@ held,?...</p>
 <p>5 days ago ... Construction Project Manager - Scotland. Ayr, Scotland, United Kingdom Full-
 time. loading Fetching your Linkedin profile .</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tetratech.referrals.selectminds.com/jobs/project-manager-14840'>Project Manager - Tetra Tech Careers</a></h5> 
+<h5><a href='https://tetratech.referrals.selectminds.com/jobs/project-manager-14840'>Project Manager - Tetra Tech Careers</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -333,7 +337,7 @@ today!</p>
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pony-dot-ai.workable.com/jobs/1078522'>pony.ai - Jobs: Material Program Manager - Apply online</a></h5> 
+<h5><a href='https://pony-dot-ai.workable.com/jobs/1078522'>pony.ai - Jobs: Material Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Material Program Manager at pony.ai.</p>
 <hr/>
@@ -366,7 +370,7 @@ Media Partners, LLC.</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oZBhafwL'>Automation Anywhere Careers - Sr. Technical Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oZBhafwL'>Automation Anywhere Careers - Sr. Technical Program Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -428,7 +432,7 @@ AUS001HI. Solution Platform Engineer. Australia. Core Business Services.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://intredo.recruitee.com/o/advertising-project-manager'>Advertising Project Manager - Intredo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://intredo.recruitee.com/o/advertising-project-manager'>Advertising Project Manager - Intredo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>17 Lip 2019 ... Advertising Project Manager. Osoba na stanowisku Adverising Project Manager'a 
 b?dzie odpowiedzialna za nadzorowanie, koordynowanie i optymalizacj??...</p>
@@ -461,10 +465,6 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/farfetch/job/o95DafwL'>Farfetch Careers - Global Sales Program Manager, Private Client</a></h5> 
 <p><span class="badge badge-light">London</span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/QGeYwVDsH8/NPI-Program-Manager'>NPI Program Manager - Bossanova Robotics - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 
